--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Album</title>
+    <title>Chellam Sir Here...</title>
 </head>
 <link rel="stylesheet" href="album.css">
 <script src="search.js"></script>
